# finplex-ai

./: .env.example  .gitignore  APPLY_PR1_LOCAL_PRODUCT_CLEANUP.md  Makefile  README.md  docker-compose.infra.yml  package-lock.json  package.json  pyproject.toml
services/api/: alembic.ini  pyproject.toml
services/api/app/: config.py  database.py  dependencies.py  main.py  security.py
services/api/app/api/: error_handlers.py
services/api/app/api/routers/: __init__.py  auth.py  customers.py  health.py  invoices.py  rag.py  reviews.py  tenants.py  users.py
services/api/app/api/schemas/: __init__.py  audit.py  auth.py  customer.py  invoice.py  rag.py  review.py  tenant.py  user.py
services/api/app/application/services/: __init__.py  audit_service.py  auth_service.py  customer_service.py  invoice_service.py  invoice_upload_service.py  mappers.py  rag_service.py  review_service.py  tenant_service.py  user_service.py
services/api/app/domain/: __init__.py  enums.py  exceptions.py
services/api/app/domain/entities/: audit_event.py  crm_record.py  customer.py  erp_record.py  invoice.py  rag_document.py  review.py  tenant.py  user.py
services/api/app/domain/policies/: invoice_policy.py  review_policy.py  tenant_policy.py
services/api/app/infrastructure/clients/: __init__.py  model_server_client.py
services/api/app/infrastructure/db/: types.py
services/api/app/infrastructure/db/models/: __init__.py  audit_model.py  base.py  crm_model.py  (+7 more)
services/api/app/infrastructure/messaging/: __init__.py  event_publisher.py  events.py
services/api/app/infrastructure/storage/: __init__.py  invoice_storage.py
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_init.py  0002_demo_support_tables.py  0003_pgvector_rag_embeddings.py
services/guardrails/: pyproject.toml
services/guardrails/app/: config.py  main.py  nemo_adapter.py  policy_loader.py  schemas.py
services/guardrails/app/checks/: __init__.py  evidence_check.py  human_review_check.py  privacy_check.py  prohibited_language_check.py  tone_check.py
services/guardrails/app/services/: __init__.py  guardrail_service.py
services/guardrails/app/utils/: redaction.py
services/guardrails/nemo_config/: config.yml  rails.co
services/guardrails/tests/: conftest.py  test_guardrail_service.py  test_guardrails_routes.py
services/model-server/: pyproject.toml
services/model-server/app/: config.py  main.py  schemas.py
services/model-server/app/api/routers/: __init__.py  health.py  inference.py
services/model-server/app/rag/: __init__.py  documents.py  hybrid_evidence_store.py
services/model-server/app/services/: __init__.py  drafting_service.py  evidence_service.py  extraction_service.py  langgraph_pipeline.py  pipeline_service.py  risk_service.py
services/model-server/tests/: conftest.py  test_evidence_service.py  test_hybrid_evidence_store.py  test_langgraph_pipeline.py  test_model_server_routes.py  test_model_server_services.py  test_risk_service.py
services/workers/: pyproject.toml
services/workers/app/: config.py  events.py  kafka_consumer.py  main.py  repositories.py  storage.py
services/workers/app/clients/: __init__.py  guardrails_client.py  model_server_client.py
services/workers/app/services/: __init__.py  invoice_processing_service.py  ocr_service.py
services/workers/tests/: conftest.py  test_guardrails_client.py  test_invoice_processing_service.py  test_model_server_client.py  test_ocr_service.py  test_storage.py
(+166 files in other folders)
